k8s/api-gateway/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: default
  labels:
    app: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      nodeSelector:
        agentpool: arm64
      tolerations:
      - key: "arch"
        operator: "Equal"
        value: "arm64"
        effect: "NoSchedule"
      containers:
        - name: api-gateway
          image: collinx0108/api-gateway:prod
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "128Mi"
              cpu: "80m"
            limits:
              memory: "384Mi"
              cpu: "250m"
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 80
            periodSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 80
            periodSeconds: 10
            failureThreshold: 3
          volumeMounts:
            - name: common-config-volume
              mountPath: /app/config
      volumes:
        - name: common-config-volume
          configMap:
            name: common-config
